[package]
name = "healthy"
version = "0.1.0"
authors = ["user"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.2"
actix-broker = "0.2"
actix-codec = "0.1.2"
actix-web = "1.0.0"
actix-web-actors = "1.0.0"
awc = "0.2.1"
env_logger = "0.6"
futures = "0.1"
bytes = "0.4"
rand = "0.7"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
